--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
             <button class="colorBlack">Black</button>
             <button class="rubber">White</button>
         </div>
+
         <div>
             <button class="rainbow">Raimbow</button>
+        </div>
+        <div>
+            <button class="shadding">Shadding</button>
+        </div>
+        <div>
+            <button class="erase">Erase</button>
         </div>
       </div>
       <div class="grids"></div>
